--- a/Aim2/code/Python/XXviirs-afd-processing.ipynb
+++ b/Aim2/code/Python/XXviirs-afd-processing.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "b987d274-1224-467b-9aa8-955a944e417c",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "8a225da1-763c-45a3-98f8-67257c44fa83",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "ebd27e24-0c46-4105-9033-8e7ecf74191d",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "00c7dbb2-da94-4e8b-befc-cc21021f84a9",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
        "54"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "bf4ac45e-4416-4247-81d8-d499d70acce6",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "87c61699-8160-4cf4-af75-6199004b407b",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "28fb5f44-037e-4433-b44c-906f8e745a98",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "4b7522a5-77cc-408d-9d54-bf51660d36ec",
    "metadata": {},
    "outputs": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "dca44746-57c1-4122-8046-ca2b58c4565b",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
        "116312"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "8daab39e-f3b8-485f-a617-3ae0409b4572",
    "metadata": {},
    "outputs": [
@@ -956,7 +956,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "a940b3cb-7702-48c3-bbf8-397847489dba",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
        "4 2019-06-27      2006 2019-06-27 14:06:00-06:00      Day"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "b1ae7f7c-be2f-4179-ab96-9145dbc458ba",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "3c154fab-3ab9-4d3d-856b-34c2a1fc018d",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a990b716-51b8-4d18-b160-5ec4c7745f0a",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "0425f330-757c-471d-b396-a686015083dd",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1156,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "6a01fbb0-4a2e-4164-a0f6-bee2e5e01a4c",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "b4ea4049-ffa7-48cc-b4e5-834b9ba030e4",
    "metadata": {},
    "outputs": [
@@ -1263,10 +1263,10 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "67"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "83e84d72-4f43-4510-845d-ea8a8d205296",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "65ec1fe2-21b3-4a45-9928-3d4d047cac03",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "56f2a665-2f17-4bde-919a-3093574a0557",
    "metadata": {},
    "outputs": [],
@@ -1425,14 +1425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "8e0faeab-f539-4a47-ac93-3933649cc719",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17b3650efb7d46278436e0be584d1071",
+       "model_id": "c221f9f0b1b941aa8984e8508527b2bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1448,7 +1448,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total elapsed time: 0.26 minutes.\n",
+      "Total elapsed time: 0.33 minutes.\n",
       "\n",
       "\n",
       "~~~~~~~~~~\n",
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "c113c774-dd4e-4884-adf5-e97bcf20b98e",
    "metadata": {},
    "outputs": [
@@ -1556,7 +1556,7 @@
        "Name: afd_count, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "e6a787a8-4df9-4605-9e74-8a1fd63b1952",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1844,7 @@
        "830      258.996539   13356       CALF CANYON  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "89505499-17b7-417b-a1c1-d032c97cfe1c",
    "metadata": {},
    "outputs": [
@@ -1865,7 +1865,7 @@
        "2475707.141178472"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "10bf0efa-590c-4b09-824f-1e489991e71d",
    "metadata": {},
    "outputs": [
@@ -1884,7 +1884,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved file to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_aspenfires_gridstats.gpkg\n"
+      "Saved file to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.gpkg\n"
      ]
     }
    ],
@@ -1906,24 +1906,249 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ada8b0d8-09b6-45ec-9198-987be922c702",
+   "id": "9b5fde5b-c2bc-4ec8-9171-193abde24c17",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save a file for GEE (cleaned columns)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
+   "id": "c41ceab4-82ff-4aa8-a195-904b78411756",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_index', 'geometry', 'grid_area', 'afd_count', 'frp_csum',\n",
+       "       'frp_max', 'frp_min', 'day_max_frp', 'dt_max_frp', 'first_obs_date',\n",
+       "       'last_obs_date', 'frp_max_day', 'frp_max_night', 'Fire_ID',\n",
+       "       'Fire_Name'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_grids_.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "e6f922a1-4dc6-4afd-a70d-ab43323c4682",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_index', 'Fire_ID', 'afd_count', 'max_date', 'first_date',\n",
+       "       'last_date', 'geometry', 'Fire_Year', 'Ig_Date', 'Last_Date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fires_.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1f30966d-ca06-4ef5-8e56-56c7cacf6185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>grid_index</th>\n",
+       "      <th>Fire_ID</th>\n",
+       "      <th>afd_count</th>\n",
+       "      <th>max_date</th>\n",
+       "      <th>first_date</th>\n",
+       "      <th>last_date</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>Fire_Year</th>\n",
+       "      <th>Ig_Date</th>\n",
+       "      <th>Last_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>822559</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>POLYGON ((-1048359.417 1669791.499, -1047984.4...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>2018-07-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>822560</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>POLYGON ((-1048359.417 1670166.499, -1047984.4...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>2018-07-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>822561</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>POLYGON ((-1048359.417 1670541.499, -1047984.4...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>2018-07-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>824823</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>POLYGON ((-1047984.417 1669791.499, -1047609.4...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>2018-07-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>824824</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>POLYGON ((-1047984.417 1670166.499, -1047609.4...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2018-06-01</td>\n",
+       "      <td>2018-07-03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   grid_index Fire_ID  afd_count    max_date  first_date   last_date  \\\n",
+       "0      822559      14          1  2018-07-05  2018-07-05  2018-07-05   \n",
+       "1      822560      14          1  2018-07-05  2018-07-05  2018-07-05   \n",
+       "2      822561      14          1  2018-07-05  2018-07-05  2018-07-05   \n",
+       "3      824823      14          1  2018-07-05  2018-07-05  2018-07-05   \n",
+       "4      824824      14          1  2018-07-05  2018-07-05  2018-07-05   \n",
+       "\n",
+       "                                            geometry Fire_Year     Ig_Date  \\\n",
+       "0  POLYGON ((-1048359.417 1669791.499, -1047984.4...      2018  2018-06-01   \n",
+       "1  POLYGON ((-1048359.417 1670166.499, -1047984.4...      2018  2018-06-01   \n",
+       "2  POLYGON ((-1048359.417 1670541.499, -1047984.4...      2018  2018-06-01   \n",
+       "3  POLYGON ((-1047984.417 1669791.499, -1047609.4...      2018  2018-06-01   \n",
+       "4  POLYGON ((-1047984.417 1670166.499, -1047609.4...      2018  2018-06-01   \n",
+       "\n",
+       "    Last_Date  \n",
+       "0  2018-07-03  \n",
+       "1  2018-07-03  \n",
+       "2  2018-07-03  \n",
+       "3  2018-07-03  \n",
+       "4  2018-07-03  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fire_grids_gee = fire_grids_.copy()\n",
+    "\n",
+    "# tidy the columns\n",
+    "fire_grids_gee = fire_grids_gee[['grid_index','Fire_ID','afd_count','day_max_frp','first_obs_date','last_obs_date','geometry']]\n",
+    "fire_grids_gee.rename(columns={'day_max_frp': 'max_date', 'first_obs_date': 'first_date', 'last_obs_date': 'last_date'}, inplace=True)\n",
+    "    \n",
+    "# join in the fire ignition dates\n",
+    "fire_grids_gee = fire_grids_gee.merge(fires_[['Fire_ID', 'Fire_Year', 'Ig_Date', 'Last_Date']], on='Fire_ID', how='left')\n",
+    "\n",
+    "# handle date fields for GEE\n",
+    "date_cols = ['max_date', 'first_date', 'last_date', 'Ig_Date', 'Last_Date']\n",
+    "for col in date_cols:\n",
+    "    fire_grids_gee[col] = fire_grids_gee[col].astype(str)\n",
+    "    \n",
+    "fire_grids_gee.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ada8b0d8-09b6-45ec-9198-987be922c702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exported layer to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/earth-engine/imports/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_fp = os.path.join(projdir,'data/earth-engine/imports/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.shp')\n",
+    "fire_grids_gee.to_file(out_fp)\n",
+    "print(f\"Exported layer to: {out_fp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "1d980edd-c07e-466d-ab0b-7bf2c94b52b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1864"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
