--- a/Aim2/code/Python/GEE-S2-Stats.ipynb
+++ b/Aim2/code/Python/GEE-S2-Stats.ipynb
@@ -2,167 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "c681f7fc-3b4e-48fb-a7e3-ea1cb9f91b69",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Success\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "*** Earth Engine *** Share your feedback by taking our Annual Developer Satisfaction Survey: https://google.qualtrics.com/jfe/form/SV_0JLhFqfSY1uiEaW?source=Init\n"
-     ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Summarizing Sentinel-2 fuel metrics in AFD\n",
+    "Summarizing Sentinel-2 spectral metrics in gridcells\n",
     "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
+    "import os, sys\n",
     "import ee\n",
     "import geemap\n",
     "import time\n",
     "\n",
-    "ee.Authenticate()\n",
+    "# Custom functions\n",
+    "sys.path.append(os.path.join(os.getcwd(),'code/'))\n",
+    "from __functions import *\n",
     "\n",
+    "ee.Authenticate()\n",
     "ee.Initialize(project='jfsp-aspen')\n",
     "\n",
-    "print(\"Success\")"
+    "print(\"Success !\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "53cf4ea2-44ee-4acf-9539-ad12b1006313",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Functions ready!\n"
-     ]
-    }
-   ],
-   "source": [
-    "def monitor_gee_export(task, sleep=30):\n",
-    "    \"\"\" Monitors EE export task \"\"\"\n",
-    "    while task.active():\n",
-    "        print('Waiting for export to finish..\\n\\tPatience young padawan.')\n",
-    "        time.sleep(sleep)  # Check every 30 seconds\n",
-    "    \n",
-    "    # Get the status of the task\n",
-    "    status = task.status()\n",
-    "    \n",
-    "    # Check if the task failed or succeeded\n",
-    "    if status['state'] == 'COMPLETED':\n",
-    "        print(\"Export completed successfully !!!!\")\n",
-    "    elif status['state'] == 'FAILED':\n",
-    "        print(f\"Export failed! Bummer. Reason: {status.get('error_message', 'Unknown error')}\")\n",
-    "    else:\n",
-    "        print(f\"Export ended with state: {status['state']}\")\n",
-    "\n",
-    "print(\"Functions ready!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79532c53-6234-412a-99b1-71a21a212bd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c29e9a5e-1dee-43e8-b1e8-778128b6269d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Calculate statistics in AFD observations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8fb9f13b-f825-4c8e-b4d7-de101d011f2a",
    "metadata": {},
    "outputs": [
@@ -199,16 +108,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MNDWI', 'LAI', 'EVI']\n"
+     ]
     }
    ],
    "source": [
     "# Load the exported asset from above\n",
-    "s2metrics = ee.Image('projects/jfsp-aspen/assets/afd_aspen_fires_S2metrics_mosaic')"
+    "s2 = ee.Image('projects/jfsp-aspen/assets/afd_aspen_fires_S2metrics_mosaic')\n",
+    "print(s2.bandNames().getInfo())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7ab7e5a7-4e39-4b94-afeb-da7508684960",
    "metadata": {},
    "outputs": [
@@ -250,18 +167,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Fire_ID', 'acq_date', 'daynight', 'Ig_Date', 'Last_Date', 'afdID', 'system:index']\n"
+      "['Fire_Year', 'grid_index', 'Fire_ID', 'max_date', 'afd_count', 'Ig_Date', 'first_date', 'last_date', 'Last_Dat_1', 'system:index']\n"
      ]
     }
    ],
    "source": [
-    "afds = ee.FeatureCollection('projects/jfsp-aspen/assets/AFD/vnp14img_geo_srm_pix_area_aspenfires')\n",
-    "print(afds.first().propertyNames().getInfo())"
+    "grid = ee.FeatureCollection('projects/jfsp-aspen/assets/viirs_snpp_jpss1_afd_aspenfires_gridstats')\n",
+    "print(grid.first().propertyNames().getInfo())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e46c07c1-a88c-4c1b-b375-ec635af4e820",
    "metadata": {},
    "outputs": [
@@ -309,18 +226,16 @@
    ],
    "source": [
     "# Simplify the feature collection properties.\n",
-    "afds = afds.select(['afdID'])\n",
+    "grid = grid.select(['grid_index'])\n",
     "\n",
-    "# Perform the reductions.\n",
-    "\n",
-    "mean_med_stdDev = ee.Reducer.mean().combine(\n",
-    "    reducer2=ee.Reducer.stdDev(), sharedInputs=True).combine(\n",
-    "    reducer2=ee.Reducer.median(), sharedInputs=True)\n",
+    "# define a custom reducer\n",
+    "mean_stdDev = ee.Reducer.mean().combine(\n",
+    "    reducer2=ee.Reducer.stdDev(), sharedInputs=True)\n",
     "\n",
     "# Perform the reduction by AFD observations\n",
-    "s2_stats = s2metrics.reduceRegions(\n",
-    "    collection=afds,\n",
-    "    reducer=mean_med_stdDev, # Mean and Standard Deviation CBI, CBI_bc, rbr\n",
+    "s2_stats = s2.reduceRegions(\n",
+    "    collection=grid,\n",
+    "    reducer=mean_stdDev,\n",
     "    scale=30\n",
     ")\n",
     "\n",
@@ -329,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "16a68690-6889-490a-b435-6488a6c44468",
    "metadata": {},
    "outputs": [
@@ -374,6 +289,12 @@
       "Export to Earth Engine Asset started!\n",
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
       "Export completed successfully !!!!\n"
      ]
     }
@@ -384,17 +305,15 @@
     "\n",
     "export_task = ee.batch.Export.table.toDrive(\n",
     "    collection=s2_stats,\n",
-    "    description='vn14img_s2-lai-evi-mndwi',\n",
+    "    description='viirs_snpp_jpss1_afd_aspenfires_gridstats_S2metrics',\n",
+    "    fileNamePrefix='viirs_snpp_jpss1_afd_aspenfires_gridstats_S2metrics',\n",
     "    fileFormat='CSV', \n",
-    "    fileNamePrefix='vn14img_s2-lai-evi-mndwi',\n",
     "    folder='S2'\n",
     ")\n",
     "\n",
-    "# Start the export task\n",
-    "export_task.start()\n",
+    "export_task.start() # Start the export task\n",
     "print(\"Export to Earth Engine Asset started!\")\n",
-    "# Monitor the task until it's finished\n",
-    "monitor_gee_export(export_task, 120) # print every 2 min"
+    "monitor_export(export_task) "
    ]
   },
   {
