Code restructure, updates to landcover summaries (GEE)

--- a/Aim2/code/Python/00fire-perimeters.ipynb
+++ b/Aim2/code/Python/00fire-perimeters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "b0687419-4278-4604-8efa-b9c34a68d9fe",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1059a21f-5055-4ed7-87dc-89bb7f302f7b",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "Index(['na_l3name', 'geometry'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "# Load the NIFC perimeters (2018 to 2023)\n",
+    "# Load the NIFC perimeters\n",
     "fp = os.path.join(projdir,'data/spatial/raw/NIFC/nifc-interagency_2018_to_2023.gpkg')\n",
     "events = gpd.read_file(fp)\n",
     "print(f\"There are [{len(events)}] NIFC perimeters.\\n{events.columns}\")"
