--- a/Aim2/code/Python/_aspen-cover_comparison.ipynb
+++ b/Aim2/code/Python/_aspen-cover_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a13eb16-d35b-4c11-a9c9-8eee1903c61c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,77 @@
    "id": "3aea6769-a087-497a-b163-83abfa4a772c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# load the 10m aspen map, calculate the percent cover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dbfb03b-d3fc-4afa-ab70-52fc554f2fc5",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6251f39f-5ff3-4156-9260-cc72cd509df7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27261689-0425-44e4-9264-59aff85ffb0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8143a31f-b444-4549-945c-3172af2ad27f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the USFS treemap summaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f50a72ce-6e49-4a47-a8e7-535b856a6047",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c4c2da-f22d-4c40-b429-447c059afca3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "224c72fd-603a-42d8-893b-56d165130244",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9e18015-d16d-477e-bb60-e58ffb92dc3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# linear model between s2 aspen cover and USFS"
+   ]
   }
  ],
  "metadata": {
