Major update, woops

--- a/Aim2/code/Python/04GEE-Severity-CBI.ipynb
+++ b/Aim2/code/Python/04GEE-Severity-CBI.ipynb
@@ -2,61 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e8875da6-de28-494e-8590-5deff24c959f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "*** Earth Engine *** Share your feedback by taking our Annual Developer Satisfaction Survey: https://google.qualtrics.com/jfe/form/SV_0JLhFqfSY1uiEaW?source=Init\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Calculate fire severity statistics within AFD observations from MODIS and VIIRS.\n",
-    "Severity index: Composite Burn Severity (CBI), calculated in GEE via Parks (2018)\n",
-    "\n",
-    "Author: maxwell.cook@colorado.edu\n",
-    "\"\"\"\n",
-    "\n",
-    "import ee\n",
-    "import geemap\n",
-    "\n",
-    "import os, time\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\") # suppresses annoying geopandas warning\n",
-    "\n",
-    "ee.Authenticate()\n",
-    "\n",
-    "ee.Initialize(project='jfsp-aspen')\n",
-    "\n",
-    "proj = 'EPSG:5070'\n",
-    "\n",
-    "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/'\n",
-    "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
-    "\n",
-    "print(\"Success\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7a817651-09da-497b-a173-a3cd898f3d48",
    "metadata": {},
    "outputs": [
     {
@@ -97,34 +44,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Functions ready!\n"
+      "Success !\n"
      ]
     }
    ],
    "source": [
-    "def monitor_gee_export(task, sleep=30):\n",
-    "    \"\"\" Monitors EE export task \"\"\"\n",
-    "    while task.active():\n",
-    "        print('Waiting for export to finish..\\n\\tPatience young padawan.')\n",
-    "        time.sleep(sleep)  # Check every 30 seconds\n",
-    "    \n",
-    "    # Get the status of the task\n",
-    "    status = task.status()\n",
-    "    \n",
-    "    # Check if the task failed or succeeded\n",
-    "    if status['state'] == 'COMPLETED':\n",
-    "        print(\"Export completed successfully !!!!\")\n",
-    "    elif status['state'] == 'FAILED':\n",
-    "        print(f\"Export failed! Bummer. Reason: {status.get('error_message', 'Unknown error')}\")\n",
-    "    else:\n",
-    "        print(f\"Export ended with state: {status['state']}\")\n",
+    "\"\"\"\n",
+    "Calculate fire severity statistics within AFD observations from MODIS and VIIRS.\n",
+    "Severity index: Composite Burn Severity (CBI), calculated in GEE via Parks (2018)\n",
     "\n",
-    "print(\"Functions ready!\")"
+    "Author: maxwell.cook@colorado.edu\n",
+    "\"\"\"\n",
+    "\n",
+    "import os, sys\n",
+    "import ee\n",
+    "import geemap\n",
+    "import time\n",
+    "\n",
+    "# Custom functions\n",
+    "sys.path.append(os.path.join(os.getcwd(),'code/'))\n",
+    "from __functions import *\n",
+    "\n",
+    "ee.Authenticate()\n",
+    "ee.Initialize(project='jfsp-aspen')\n",
+    "\n",
+    "print(\"Success !\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "e5f6b17e-1250-47dd-a030-f44df46da385",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "630cba3c-2a17-432d-83aa-db242a71dcbe",
    "metadata": {},
    "outputs": [
@@ -166,19 +123,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['system:index', 'grid_index']\n"
+      "Number of aspen fires: 49047\n",
+      "['Fire_Year', 'grid_index', 'Fire_ID', 'max_date', 'afd_count', 'Ig_Date', 'first_date', 'last_date', 'Last_Dat_1', 'system:index']\n"
      ]
     }
    ],
    "source": [
-    "# Load the FRP observations\n",
-    "frp_grid = ee.FeatureCollection('projects/jfsp-aspen/assets/viirs_snpp_jpss1_afd_aspenfires_gridstats')\n",
-    "print(afd.first().propertyNames().getInfo())"
+    "# Load the gridded FRP data\n",
+    "grid = ee.FeatureCollection('projects/jfsp-aspen/assets/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats')\n",
+    "print(f\"Number of aspen fires: {grid.size().getInfo()}\")\n",
+    "print(grid.first().propertyNames().getInfo())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0fb708c8-2a03-4d97-877f-5d2d0b20b2dd",
    "metadata": {},
    "outputs": [
@@ -225,13 +184,37 @@
     }
    ],
    "source": [
-    "frp_grid = frp_grid.select(['grid_index'])\n",
-    "print(afd.first().propertyNames().getInfo())"
+    "grid = grid.select(['grid_index'])\n",
+    "print(grid.first().propertyNames().getInfo())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "id": "1b9ce1fa-1a6d-4561-9258-d018d5b9f4c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9285f4c-c973-4160-9f2e-e403c005c5f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f109bb67-f42b-40c9-a747-54a4b544574f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5353a9bb-29d8-4a92-9012-3cfe607cf35f",
    "metadata": {},
    "outputs": [
@@ -273,19 +256,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CBI', 'CBI_bc', 'rbr']\n"
+      "['CBI_bc', 'rbr']\n"
      ]
     }
    ],
    "source": [
     "# Load the CBI mosaic\n",
-    "cbi = ee.Image('projects/jfsp-aspen/assets/CBI/afd_aspen-fires_2018_to_2023_cbi-mosaic')\n",
+    "cbi = ee.Image('projects/jfsp-aspen/assets/viirs_snpp_jpss1_aspenfires_srm_cbi_mosaic')\n",
     "print(cbi.bandNames().getInfo())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "aa999669-b262-4046-bbdf-f9dcdeb9f047",
    "metadata": {},
    "outputs": [
@@ -383,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "c6a39923-8b86-4f0b-9667-c3cde87c6048",
    "metadata": {},
    "outputs": [
@@ -435,7 +418,7 @@
     "    reducer2=ee.Reducer.stdDev(), sharedInputs=True)\n",
     "\n",
     "cbi_average = cbi.reduceRegions(\n",
-    "    collection=frp_grid,\n",
+    "    collection=grid,\n",
     "    reducer=average, \n",
     "    scale=30\n",
     ")\n",
@@ -444,7 +427,7 @@
     "extremes = ee.Reducer.percentile([90,95,99])\n",
     "\n",
     "cbi_extremes = cbi.reduceRegions(\n",
-    "    collection=frp_grid,\n",
+    "    collection=grid,\n",
     "    reducer=extremes, \n",
     "    scale=30\n",
     ")\n",
@@ -454,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "25f3c32d-84fd-4ad9-98d7-bac84fe10ceb",
    "metadata": {},
    "outputs": [
@@ -508,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "96c2aa40-cf37-4df7-9396-f29c9150186e",
    "metadata": {},
    "outputs": [
@@ -580,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "57dd03bb-7a02-432a-9bd8-7d4b86d87aa1",
    "metadata": {},
    "outputs": [
@@ -643,57 +626,23 @@
       "\tPatience young padawan.\n",
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
       "Export completed successfully !!!!\n"
      ]
     }
    ],
    "source": [
-    "# Export table to Drive.\n",
-    "cbi_stats = cbi_stats.map(lambda ftr: ftr.setGeometry(None)) # drop geometry column\n",
-    "\n",
+    "# export table to Drive.\n",
     "export_task = ee.batch.Export.table.toDrive(\n",
     "    collection=cbi_stats,\n",
-    "    description='viirs_snpp_jpss1_afd_aspenfires_gridstats_cbi',\n",
-    "    fileNamePrefix='viirs_snpp_jpss1_afd_aspenfires_gridstats_cbi',\n",
+    "    description='gridstats_cbi_rbr',\n",
+    "    fileNamePrefix='gridstats_cbi_rbr',\n",
     "    fileFormat='CSV', \n",
     "    folder='CBI'\n",
     ")\n",
     "\n",
     "export_task.start()\n",
     "print(\"Export to Earth Engine Asset started!\")\n",
-    "monitor_gee_export(export_task)"
+    "monitor_export(export_task, 120)"
    ]
   },
   {
